--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,35 @@
-MONGODB_URI=mongodb://127.0.0.1:27017/mobile-shop
-JWT_SECRET=Sltharusha1234
-PORT=5000
+# Server
 NODE_ENV=development
+PORT=5000
+FRONTEND_URL=http://localhost:3000
+
+# Database
+MONGODB_URI=mongodb://localhost:27017/mobile_shop
+
+# JWT
+JWT_SECRET=your_super_secret_jwt_key_change_this_in_production
+JWT_EXPIRE=7d
+JWT_COOKIE_EXPIRE=7
+
+# Cloudinary (Image Upload)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
+# Stripe (Payment)
+STRIPE_SECRET_KEY=your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+
+# Email
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_password
+EMAIL_FROM=noreply@mobileshop.com
+
+# Rate Limiting
+RATE_LIMIT_MAX=1000
+RATE_LIMIT_WINDOW_MS=15
+
+# Security
+CORS_ORIGIN=http://localhost:3000
